--- a/app/src/main/res/menu/my_config.xml
+++ b/app/src/main/res/menu/my_config.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_help"
         android:title="@string/help"
         android:icon="@drawable/ic_live_help_black_24dp"
         app:showAsAction="always" />
