--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="io.legado.app.ui.search.SearchActivity">
+    tools:context=".ui.book.search.SearchActivity">
 
     <io.legado.app.ui.widget.TitleBar
             android:id="@+id/title_bar"
