--- a/app/src/main/res/menu/read_book.xml
+++ b/app/src/main/res/menu/read_book.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.activity.MainActivity">
+    tools:context=".ui.main.MainActivity">
 
     <group android:id="@+id/menuOnLine">
         <item
