--- a/app/src/main/res/menu/my_config.xml
+++ b/app/src/main/res/menu/my_config.xml
@@ -8,4 +8,16 @@
         android:icon="@drawable/ic_live_help_black_24dp"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/menu_backup"
+        android:title="@string/help"
+        android:icon="@drawable/ic_backup"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/menu_restore"
+        android:title="@string/help"
+        android:icon="@drawable/ic_restore"
+        app:showAsAction="always" />
+
 </menu>
