--- a/app/src/main/res/xml/pref_config_web_dav.xml
+++ b/app/src/main/res/xml/pref_config_web_dav.xml
@@ -2,19 +2,19 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <io.legado.app.lib.theme.prefs.ATEEditTextPreference
+    <androidx.preference.EditTextPreference
         android:key="web_dav_url"
         android:title="WebDav 服务器地址"
         android:summary="输入你的服务器地址"
         app:iconSpaceReserved="false" />
 
-    <io.legado.app.lib.theme.prefs.ATEEditTextPreference
+    <androidx.preference.EditTextPreference
         android:key="web_dav_account"
         android:title="WebDav 账号"
         android:summary="输入你的WebDav账号"
         app:iconSpaceReserved="false" />
 
-    <io.legado.app.lib.theme.prefs.ATEEditTextPreference
+    <androidx.preference.EditTextPreference
         android:key="web_dav_password"
         android:title="WebDav 密码"
         android:summary="@string/web_dav_pw_s"
