--- a/app/src/main/res/layout/dialog_read_book_style.xml
+++ b/app/src/main/res/layout/dialog_read_book_style.xml
@@ -262,7 +262,19 @@
             android:text="@string/page_anim_slide" />
 
         <io.legado.app.lib.theme.view.ATERadioNoButton
-            android:id="@+id/rb_anim3"
+            android:id="@+id/rb_scroll_anim"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:padding="5dp"
+            android:button="@null"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="@string/page_anim_scroll" />
+
+        <io.legado.app.lib.theme.view.ATERadioNoButton
+            android:id="@+id/rb_no_anim"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
