--- a/app/src/main/res/layout/dialog_edit_text.xml
+++ b/app/src/main/res/layout/dialog_edit_text.xml
@@ -7,7 +7,7 @@
         android:layout_marginBottom="48dp"
         android:overScrollMode="ifContentScrolls">
 
-    <androidx.appcompat.widget.AppCompatEditText
+    <io.legado.app.lib.theme.view.ATEAutoCompleteTextView
             android:id="@+id/edit_view"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
