--- a/app/src/main/res/layout/item_1line_text_and_del.xml
+++ b/app/src/main/res/layout/item_1line_text_and_del.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="6dp"
     tools:ignore="UseCompoundDrawables">
