--- a/app/src/main/res/menu/main_bookshelf.xml
+++ b/app/src/main/res/menu/main_bookshelf.xml
@@ -27,6 +27,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/menu_group_manage"
+        android:icon="@drawable/ic_groups"
+        android:title="@string/group_manage"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_bookshelf_layout"
         android:icon="@drawable/ic_view_quilt"
         android:title="@string/bookshelf_layout"
