--- a/app/src/main/res/layout/item_group_manage.xml
+++ b/app/src/main/res/layout/item_group_manage.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/background"
     android:padding="8dp"
     android:orientation="horizontal">
 
