--- a/app/src/main/res/layout-land/activity_book_info.xml
+++ b/app/src/main/res/layout-land/activity_book_info.xml
@@ -165,7 +165,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="简介"
+            android:text="@string/book_intro"
             android:textColor="@color/tv_text_default"
             android:textSize="16sp" />
 
@@ -192,22 +192,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/fg">
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0"
-                android:paddingLeft="8dp"
-                android:paddingTop="8dp"
-                android:text="目录"
-                android:textColor="@color/tv_text_default"
-                android:textSize="16sp" />
-
-        </LinearLayout>
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="8dp"
+            android:text="@string/chapter_list"
+            android:textColor="@color/tv_text_default"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:id="@+id/ll_chapter_base_info"
@@ -223,7 +216,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="当前位置：" />
+                android:text="@string/dur_pos" />
 
             <TextView
                 android:id="@+id/tv_current_chapter_info"
