--- a/app/src/main/res/layout/activity_rss_source_edit.xml
+++ b/app/src/main/res/layout/activity_rss_source_edit.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         app:contentInsetStartWithNavigation="0dp"
         app:displayHomeAsUp="true"
+        app:fitStatusBar="false"
         app:title="@string/rss_source_edit" />
 
     <androidx.recyclerview.widget.RecyclerView
