--- a/app/src/main/res/layout/activity_read_rss.xml
+++ b/app/src/main/res/layout/activity_read_rss.xml
@@ -3,5 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<WebView
+    android:id="@+id/webView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
 </LinearLayout>
