--- a/app/src/main/res/layout/activity_rss_artivles.xml
+++ b/app/src/main/res/layout/activity_rss_artivles.xml
@@ -12,15 +12,24 @@
         app:contentInsetStartWithNavigation="0dp"
         app:displayHomeAsUp="true" />
 
-    <FrameLayout
+    <io.legado.app.ui.widget.anima.RefreshProgressBar
+        android:id="@+id/refresh_progress_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="2dp"
+        app:layout_constraintTop_toBottomOf="@id/title_bar" />
 
-        <io.legado.app.ui.widget.recycler.scroller.FastScrollRecyclerView
+    <io.legado.app.ui.widget.dynamiclayout.DynamicFrameLayout
+        android:id="@+id/content_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/refresh_progress_bar">
+
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </FrameLayout>
+    </io.legado.app.ui.widget.dynamiclayout.DynamicFrameLayout>
 
 </LinearLayout>
