--- a/app/src/main/res/layout/item_rss_article.xml
+++ b/app/src/main/res/layout/item_rss_article.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/tv_title"
             android:textSize="18sp"
             android:text="Title"
             android:layout_gravity="center"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/pub_date"
+            android:id="@+id/tv_pub_date"
             android:textSize="12sp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/author"
+            android:id="@+id/tv_author"
             android:textSize="16sp"
             android:text="author"
             android:layout_gravity="center"
