--- a/app/src/main/res/layout/item_rss_article.xml
+++ b/app/src/main/res/layout/item_rss_article.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:padding="16dp">
@@ -33,11 +34,13 @@
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="68dp"
+        android:layout_width="84dp"
         android:layout_height="68dp"
+        android:paddingLeft="16dp"
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:contentDescription="@string/img_cover" />
+        android:contentDescription="@string/img_cover"
+        tools:ignore="RtlHardcoded,RtlSymmetry" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
