--- a/app/src/main/res/layout/activity_rss_source_edit.xml
+++ b/app/src/main/res/layout/activity_rss_source_edit.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="@string/is_enable" />
+            android:text="@string/enable_js" />
 
     </LinearLayout>
 
