--- a/app/src/main/res/layout/activity_rss_source_edit.xml
+++ b/app/src/main/res/layout/activity_rss_source_edit.xml
@@ -31,7 +31,7 @@
             android:id="@+id/cb_enable_js"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
+            android:checked="false"
             android:text="@string/enable_js" />
 
     </LinearLayout>
