--- a/app/src/main/res/layout/activity_rss_source_edit.xml
+++ b/app/src/main/res/layout/activity_rss_source_edit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +19,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center_vertical">
 
         <io.legado.app.lib.theme.view.ATECheckBox
             android:id="@+id/cb_is_enable"
@@ -27,12 +29,27 @@
             android:checked="true"
             android:text="@string/is_enable" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:text="WebView:"
+            tools:ignore="HardcodedText" />
+
         <io.legado.app.lib.theme.view.ATECheckBox
             android:id="@+id/cb_enable_js"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
             android:text="@string/enable_js" />
+
+        <io.legado.app.lib.theme.view.ATECheckBox
+            android:id="@+id/cb_enable_base_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="@string/load_with_base_url" />
 
     </LinearLayout>
 
