--- a/app/src/main/res/menu/main_rss.xml
+++ b/app/src/main/res/menu/main_rss.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_rss_add"
-        android:title="@string/add"
-        android:icon="@drawable/ic_add"
+        android:id="@+id/menu_rss_star"
+        android:title="@string/store_up"
+        android:icon="@drawable/ic_star"
         app:showAsAction="always" />
+
     <item
         android:id="@+id/menu_rss_config"
         android:title="@string/setting"
         android:icon="@drawable/ic_settings"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 
 </menu>
