--- a/app/src/main/res/layout/activity_rss_artivles.xml
+++ b/app/src/main/res/layout/activity_rss_artivles.xml
@@ -11,21 +11,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <io.legado.app.ui.widget.anima.RefreshProgressBar
-        android:id="@+id/refresh_progress_bar"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        app:layout_constraintTop_toBottomOf="@id/title_bar" />
-
     <io.legado.app.ui.widget.dynamiclayout.DynamicFrameLayout
         android:id="@+id/content_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/refresh_progress_bar">
+        app:layout_constraintTop_toBottomOf="@id/title_bar">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+        <io.legado.app.ui.widget.recycler.RefreshRecyclerView
+            android:id="@+id/refresh_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
