--- a/app/src/main/res/menu/book_search.xml
+++ b/app/src/main/res/menu/book_search.xml
@@ -4,20 +4,14 @@
     tools:context=".view.activity.MainActivity">
 
     <item
-        android:id="@+id/menu_precision_search"
-        android:title="@string/book_source_manage"
-        android:checkable="true"
-        app:showAsAction="never" />
-
-    <item
         android:id="@+id/menu_source_manage"
         android:title="@string/book_source_manage"
         app:showAsAction="never" />
 
-    <group
-        android:id="@+id/source_group"
-        android:checkableBehavior="single">
-
-    </group>
+    <item
+        android:id="@+id/menu_precision_search"
+        android:title="@string/precision_search"
+        android:checkable="true"
+        app:showAsAction="never" />
 
 </menu>
